[gd_scene load_steps=6 format=3 uid="uid://rer8nna4itye"]

[ext_resource type="Script" uid="uid://22xusiycby66" path="res://Assets/pausemenu.gd" id="1_b0sdf"]
[ext_resource type="FontFile" uid="uid://baniet7aixrnq" path="res://m5x7.ttf" id="1_qrbkd"]
[ext_resource type="AudioStream" uid="uid://q6iylgd1j0a2" path="res://Audio/buttonpress.mp3" id="2_b0sdf"]
[ext_resource type="AudioStream" uid="uid://vdd7r2c04aob" path="res://Audio/hover-button-287656.mp3" id="3_p8p2p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgo75"]
bg_color = Color(0.938266, 0.355157, 0.634376, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.5)

[node name="Pausemenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b0sdf")

[node name="resume" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 437.0
offset_top = 238.0
offset_right = 720.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.513726, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qrbkd")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_cgo75")
text = "Resume"

[node name="quit" type="Button" parent="."]
offset_left = 430.0
offset_top = 448.0
offset_right = 726.0
offset_bottom = 594.0
theme_override_colors/font_color = Color(0.580615, 0.0519404, 0.322269, 1)
theme_override_fonts/font = ExtResource("1_qrbkd")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_cgo75")
text = "Quit
"
metadata/_edit_use_anchors_ = true

[node name="pausetitle" type="Button" parent="."]
offset_left = 360.0
offset_top = 24.0
offset_right = 804.0
offset_bottom = 138.0
theme_override_colors/font_color = Color(0.0627451, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_qrbkd")
theme_override_font_sizes/font_size = 143
theme_override_styles/normal = SubResource("StyleBoxFlat_cgo75")
text = "PAUSED"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b0sdf")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p8p2p")

[connection signal="mouse_entered" from="resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
